--- a/roomplay/styles/index.css
+++ b/roomplay/styles/index.css
@@ -1,26 +1,32 @@
 @font-face {
   font-family: "kar";
-  src: url(fonts/Karstar\ Free.ttf);
+  src: url(../fonts/Karstar\ Free.ttf);
 }
 @font-face {
   font-family: "signUp";
-  src: url(fonts/Signup.ttf);
+  src: url(../fonts/Signup.ttf);
 }
-/* BACKGROUND */
 .body {
   background-color: rgb(86, 52, 148);
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
 }
 
-/* NAVIGATION */
-.headerRoomplay {
+.boxButtonScroll {
+  height: 50px;
+}
+
+.buttonScroll {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  width: 100%;
+  justify-content: center;
+  height: 30px;
+  width: 50px;
+  margin: 10px 10px;
   background-color: rgb(38, 0, 109);
+  font-size: 1.5em;
+  color: grey;
+  border-bottom: 5px solid grey;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 .logo {
@@ -30,7 +36,7 @@
   align-items: center;
   height: 150px;
   width: 150px;
-  margin: 2%;
+  margin: 1%;
   background-color: wheat;
   opacity: 80%;
   border-style: double;
@@ -39,7 +45,7 @@
 }
 
 .author {
-  margin-left: 25px;
+  margin-left: 10px;
   margin-top: 10px;
   font-family: "kar";
   font-size: 2.5em;
@@ -51,16 +57,18 @@
 
 .banner {
   margin-top: 20px;
-  padding: 5px;
   border-style: solid;
   border-radius: 10%;
   border-width: 1px;
   font-family: "signUp";
   text-align: center;
   letter-spacing: 3px;
-  font-size: 1.5em;
-  font-weight: bold;
   background-color: gold;
+}
+
+.headerRoomplay {
+  justify-content: space-around;
+  background-color: rgb(38, 0, 109);
 }
 
 .buttonNavigationroomplay {
@@ -69,6 +77,7 @@
   font-size: 20px;
   background: transparent;
   border: 2px solid transparent;
+  border-radius: 20px;
   color: darkslategray;
 }
 
@@ -77,26 +86,7 @@
 }
 
 .buttonNavClicked {
-  -webkit-animation: click 0.5s linear infinite;
-          animation: click 0.5s linear infinite;
-}
-
-@-webkit-keyframes click {
-  0% {
-    border: 2px solid yellowgreen;
-  }
-  20% {
-    border: 2px solid transparent;
-  }
-  50% {
-    border: 2px solid yellowgreen;
-  }
-  70% {
-    border: 2px solid transparent;
-  }
-  100% {
-    border: 2px solid yellowgreen;
-  }
+  animation: click 0.5s linear infinite;
 }
 
 @keyframes click {
@@ -117,34 +107,27 @@
   }
 }
 .boxText {
-  /* display: flex; */
-  /* justify-content: space-between; */
-  /* align-items: center; */
-  /* width: 50%; */
-  /* margin: 10px 0; */
-  /* padding: 10px; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+  min-width: 150px;
   background-color: rgb(86, 52, 148);
   border-radius: 25px;
-  /* text-align: center; */
+  text-align: center;
   color: rgb(38, 0, 109);
   font-family: system-ui;
+  overflow: hidden;
 }
 
 .boxText p {
   max-width: 500px;
-  /* margin: 0 10px; */
   font-weight: bold;
 }
 
-/* .boxPhotos, .boxMessage {
-  display: flex;
-  flex-direction: column;
-} */
-
-/* .boxTechs {
-  display: flex;
-  align-items: center;
-} */
+.boxTechs {
+  margin: 0;
+}
 
 .imgTechs {
   height: 30px;
@@ -152,30 +135,38 @@
   margin: 0 5px;
 }
 
-.roomplayArticlesBox {
-  height: 100%;
-  width: 100%;
-  margin-top: 300px;
+.roomplayArticleBox {
+  min-height: 350px;
+  width: 60%;
+  border: 5px solid rgb(38, 0, 109);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.roomplayArticles {
-  display: flex;
-  align-items: center;
-  height: 400px;
-  width: 50%;
-  top: 350px;
-  margin: 50px;
+.roomplayArticle {
+  max-width: 95%;
+  min-width: 150px;
   border: 5px double grey;
   border-radius: 10px;
   color: white;
   cursor: pointer;
+  transition: 0.3s;
 }
 
-.roomplayArticlesImage {
-  height: 80%;
-  width: 50%;
-  margin: 20px;
+.roomplayArticlePlace {
+  min-width: 80%;
+  background-color: transparent;
+}
+
+.roomplayArticleImage {
   border: 5px double grey;
   border-radius: 10px;
   transition: 1s;
-}/*# sourceMappingURL=roomplay.css.map */
+}
+
+@media (max-width: 576px) {
+  .boxText, .logo, .buttonNavigationroomplay, .roomplayArticle {
+    font-size: 0.7em;
+    scale: 0.8;
+  }
+}/*# sourceMappingURL=index.css.map */
